--- a/Qubly.css
+++ b/Qubly.css
@@ -73,13 +73,17 @@ body {
 .hamb__field {
     width: 40px;
     height: 30px;
-    background-color: #5500cc;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    
 }
-.hamb__field span {
+.bar {
     width: 40px;
-    height: 6px;
+    height: 5px;
     margin-bottom: 5px;
-    background-color: #FFF;
+    background-color: rgb(119, 0, 255);
+    display: block;
 }
 
 
