--- a/Qubly.css
+++ b/Qubly.css
@@ -76,6 +76,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    background-color: purple;
     
 }
 .bar {
