--- a/Qubly.css
+++ b/Qubly.css
@@ -57,7 +57,6 @@ body {
     left: 0;
     width: 100%;
     z-index: 100;
-    overflow: hidden;
 }
 .header__container {
     height: 54px;
@@ -185,7 +184,6 @@ body {
 .__opened__burger__hamb .bar:nth-child(3){
     transform: translateY(-8px) rotate(-45deg);
 }
-
 
 
 
@@ -408,6 +406,13 @@ body {
 }
 
 @media (max-width: 980px) {
+    .WhyQubly__features {
+        margin-top: 40px;
+    }
+    .WhyQubly__features__block {
+        margin-top: 24px;
+    }
+
     .WhyQubly__features__column {
         grid-template-columns: 1fr 1fr;
     }
@@ -425,5 +430,102 @@ body {
         margin-top: 40px;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
