--- a/Qubly.css
+++ b/Qubly.css
@@ -23,7 +23,7 @@ img {
 body {
     background-color: rgb(255, 255, 255);
     color: #000;
-    font-size: 18px;
+    font-size: 16px;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     font-weight: 500;
     transition: padding 0.3s;
@@ -98,7 +98,7 @@ body {
 .menu__link {
     padding: 10px 0;
     margin-right: 40px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     line-height: 14px;
     letter-spacing: 0em;
@@ -145,7 +145,7 @@ body {
 .burger__menu__link {
     color: #E2F1FF;
     padding: 10px 0;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     line-height: 14px;
     letter-spacing: 0em;
@@ -239,6 +239,7 @@ body {
     background-color: #F7F1FF;
     border-radius: 15px;
     align-items: center;
+    cursor: pointer;
 
 }
 .first__content__info__links__img {
@@ -433,9 +434,115 @@ body {
 
 
 
+.ForProductTeams {
+    margin-top: -80px;
+}
 
+.ForProductTeams__body {
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.ForProductTeams__image {
+    max-width: 412px;
+    margin-right: 40px;
+}
+.ForProductTeams__image img{
+    width: 100%;
+}
 
+.__info__block {
+    width: 474px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+}
+.info__block__tittle__link {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: #722ED1;
+    padding: 12px 24px;
+    background-color: #F7F1FF;
+    border-radius: 23px;
+    
+}
 
+.info__block__tittle {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0em;
+    text-align: left;
+    
+}
+@media (max-width:760px) {
+    .ForProductTeams__body {
+        flex-direction: column;
+        row-gap: 40px;
+        align-items: center;
+    }
+    .__info__block {
+        width: 100%;
+    }
+    .ForProductTeams__image {
+        margin-right: 0;
+    }
+}
+
+/*________________________________*/
+
+.ForEngineeringTeams {
+    margin-top: 80px;
+}
+
+.ForEngineeringTeams__body {
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.ForEngineeringTeams__image {
+    max-width: 684px;
+    margin-left: 40px;
+}
+.ForEngineeringTeams__image img{
+    width: 100%;
+}
+
+@media (max-width:760px) {
+    .ForEngineeringTeams__body {
+        flex-direction: column;
+        row-gap: 40px;
+        align-items: center;
+    }
+
+    .ForEngineeringTeams__image {
+        margin-left: 0;
+    }
+}
+
+/*________________________________________________*/
+
+.last__text {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.last__text__p {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 32px;
+    letter-spacing: 0em;
+    text-align: center;
+    
+}
+
+/* .footer {
+    margin-top: 300px;
+} */
 
 
 
